0.9.2
-----
1. Fix Qobuz (and others?) search field.

0.9.1
-----
 1. Fix "TuneIn Options" when "More" selected from now-playing.
 2. Allow grid in more cases - e.g. "What was that tune?"
 3. Don't square off radio logos in queue and desktop bottom bar.
 4. Always use recycler view for grids, and for lists where its possible to
    switch to grid. (Recycler is quicker to update when toggling).
 5. Fix toggling image sizes when 1st image does not have size parameters (e.g.
    radio search results).
 6. For mobile layout, show song details in toolbar of now-playing view if song
    info is being displayed.
 7. For mobile layout, only toggle play/pause and info button if screen width is
    less than 600px.
 8. No need for lazy-load of images with recycler.
 9. Add a "now-playing" view. This is the same as the expanded desktop view, but
    designed to show only now playing info.
10. New icon for 'Browse' tab, and use music note for now-playing tab, in mobile
    layout.
11. When getting album review from MAI, if we have an album_id then just pass
    that and not other details.
12. Move 'New Music' to top-level for non-server-categories.
13. Fix technical info not showing in mini-player (this view also needs to
    listen to resize events, so that info is shown if wide enough).
14. Make letter-overlay ignore click events, and allow these to fall through to
    item below.
15. Fix mini-player when playing tracks with a composer.

0.9.0
-----
 1. Fix missing repeat-single icon in desktop queue view.
 2. Display "current / total" in now-playing.
 3. Add mini-player.
 4. Only show technical info in desktop bottom bar if not showing ratings, or
    screen width is 900px or higher.
 5. Reduce CPU load when the server connection is lost, or there are no players,
    by using icons and not a circular spinning progressbars.
 6. When getting track info for a queue item, pass its position in the queue to