@@ -518,6 +518,10 @@ a {
  margin:16px 8px 16px 8px;
  font-size:400%;
  text-align:center;
+ overflow: hidden;
+ display: -webkit-box;
+ -webkit-box-orient: vertical;
+ -webkit-line-clamp: 2;
 }
 
 @media only screen and (max-height:800px) {
@@ -557,6 +561,12 @@ a {
   margin:4px !important;
   font-size:100% !important;
   text-align:center;
+ }
+}
+
+@media only screen and (max-height:365px) {
+ .np-text-landscape {
+  -webkit-line-clamp: 1 !important;
  }
 }
 
